[metadata]
name = invertsy
version = 1.0.0
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = Python package of simulated environments (e.g. sky and the world), using common and easy-to-install
              packages, e.g. NumPy and SciPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/evgkanias/InvertSy
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages =
    invertsy
    invertsy.agent
    invertsy.env
    invertsy.sim
python_requires = >=3.8
install_requirements = file: requirements.txt