[metadata]
name = invertsy
version = v1.0.0-alpha
author = Evripidis Gkanias
author_email = ev.gkanias@ed.ac.uk
description = Python package of simulated environments (e.g. sky and the world), using common and easy-to-install
              packages, e.g. NumPy and SciPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InsectRobotics/InvertSy
license = GPLv3+
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Licence :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages =
    invertsy
    invertsy.agent
    invertsy.env
    invertsy.sim
python_requires = >=3.8
install_requirements =
    setuptools>=40.8.0
    wheel
    numpy>=1.20.1
    scipy>=1.6.1
    scikit-learn>=0.23.2
    joblib>=1.0.1
    matplotlib>=3.3.4
project_urls =
    Bug Reports = https://github.com/InsectRobotics/InvertSy/issues
    Source = https://github.com/InsectRobotics/InvertSy